# hello-packaging

./: CMakeLists.txt
data/: com.github.rugglcon.hello-again.appdata.xml  com.github.rugglcon.hello-again.desktop
debian/: changelog  control  copyright
po/: com.github.rugglcon.hello-again.pot
src/: hello-again.vala
